--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/backgrounds/
+    - assets/gifs/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -61,12 +63,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Korolev
+      fonts:
+        - asset: assets/fonts/Korolev-Medium.otf
+          weight: 500
+        - asset: assets/fonts/Korolev-Light.otf
+          weight: 300
+        - asset: assets/fonts/Korolev-Bold.otf
+          weight: 700
+    - family: GothamNarrow
+      fonts:
+        - asset: assets/fonts/Gotham-Narrow-Book.otf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
