Creando carpeta decorations
Finalización de la pantalla de inicio de ruta y creando todas las decoraciones

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/backgrounds/
+    - assets/backgrounds/decorations/
     - assets/gifs/
   #   - images/a_dot_ham.jpeg
 
