feat(*): Fixing navigation with arguments. feat(main.dart): Added navigation to all the screens. (*): Added customization per chapter to all the screens of the chapter. add(chapter.settings.json): Added a json that contains the configuration of each chapter

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,9 @@ flutter:
     - assets/icons/
     - assets/backgrounds/
     - assets/backgrounds/decorations/
+    - assets/backgrounds/chapterImages/
     - assets/gifs/
+    - assets/json/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
