--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^5.0.0
-
+  firebase_core: ^1.3.0
+  cloud_firestore: ^2.2.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
