--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^5.0.0
+  url_launcher: ^6.0.8
   firebase_core: ^1.3.0
   cloud_firestore: ^2.2.2
   
