--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -60,6 +60,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: webapp
+          path: build/web
       
       - name: Deploy to preview chanel
         uses: FirebaseExtended/action-hosting-deploy@v0
