--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -48,7 +48,8 @@ jobs:
           name: webapp
           path: build/web
           
-  deploy:
+  preview:
+    name: Deploy to preview channel
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     needs: build
     runs-on: ubuntu-latest
