update name with preview

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -24,7 +24,7 @@ jobs:
         run: flutter test
   
   build:
-    name:  Build Web App for release
+    name:  Build Web App for preview
     needs: test
     runs-on: macos-latest
     steps:
