--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Load web assets for deployment
         uses: actions/download-artifact@v2
         with:
-          name: webapp
+          name: webapp-2222
           path: build/web
       
       - name: Deploy to hosting
