--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^5.0.0
   url_launcher: ^6.0.8
+  video_player: ^2.1.6
   firebase_core: ^1.3.0
   cloud_firestore: ^2.2.2
   
