--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   url_launcher: ^6.0.8
   video_player: ^2.1.6
   just_audio: ^0.8.0
+  flutter_staggered_grid_view: ^0.4.0
   firebase_core: ^1.3.0
   cloud_firestore: ^2.2.2
   
