--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   provider: ^5.0.0
   url_launcher: ^6.0.8
   video_player: ^2.1.6
+  chewie: ^1.2.2
   just_audio: ^0.8.0
   flutter_staggered_grid_view: ^0.4.0
   firebase_core: ^1.3.0
