--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/backgrounds/
+    - assets/images/
     - assets/backgrounds/decorations/
     - assets/backgrounds/chapterImages/
     - assets/gifs/
