--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -111,11 +111,11 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: android-2222
-          path: build/app/outputs/apk/release/*.apk
+          path: build/app/outputs/apk/release
 
       - name: Cache ios application
         uses: actions/upload-artifact@v2
         with:
           name: ios-2222
-          path: build/ios/iphoneos/app.ipa
+          path: build/ios/iphoneos/
   
