--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   just_audio: ^0.8.0
   flutter_staggered_grid_view: ^0.4.0
   flutter_markdown: ^0.6.2
+  rxdart: ^0.27.1
     
 dev_dependencies:
   flutter_test:
