--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/backgrounds/
+    - assets/gifs/
     - assets/images/
     - assets/backgrounds/decorations/
     - assets/backgrounds/background-decorations/
