--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,7 @@ flutter:
     - assets/images/
     - assets/backgrounds/decorations/
     - assets/backgrounds/background-decorations/
-  #   - images/a_dot_ham.jpeg
+    - assets/videos/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
