--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   url_launcher: ^6.0.8
   video_player: ^2.1.6
   chewie: ^1.2.2
+  better_player: ^0.0.73
   just_audio: ^0.8.0
   flutter_staggered_grid_view: ^0.4.0
   flutter_markdown: ^0.6.2
