--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   firebase_analytics: "^8.2.0"
   firebase_auth: "^3.0.1"
   cloud_firestore: "^2.4.0"
+  cloud_functions: "^3.0.1"
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -45,7 +46,7 @@ dependencies:
   firebase_storage: ^10.0.2
   file_picker: ^4.0.0
   rxdart: ^0.27.1
-    
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
