--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/backgrounds/
+    - assets/gamification/
     - assets/gifs/
     - assets/images/
     - assets/backgrounds/decorations/
