--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
     - assets/gamification/
     - assets/gifs/
     - assets/images/
+    - assets/images/chat/
     - assets/backgrounds/decorations/
     - assets/backgrounds/background-decorations/
     - assets/videos/
