--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   change_app_package_name: ^1.0.0
+  flutter_launcher_icons: "^0.9.2"
+
+# icons configuration
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/app-icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
