--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dev_dependencies:
     sdk: flutter
   change_app_package_name: ^1.0.0
   flutter_launcher_icons: "^0.9.2"
+  lints: ^1.0.1
 
 # icons configuration
 flutter_icons:
@@ -83,12 +84,6 @@ flutter:
     - assets/videos/
     - assets/navbar/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -106,11 +101,3 @@ flutter:
     - family: GothamNarrow
       fonts:
         - asset: assets/fonts/Gotham-Narrow-Book.otf
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
