--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -3,9 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>590170055799-dmbpu6chsi1jkcbp6d5mq73d75tsb0l6.apps.googleusercontent.com</string>
+	<string>590170055799-58106b9g3tb2v1mhbc8dv719546p8fur.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.590170055799-dmbpu6chsi1jkcbp6d5mq73d75tsb0l6</string>
+	<string>com.googleusercontent.apps.590170055799-58106b9g3tb2v1mhbc8dv719546p8fur</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>590170055799-38do24die01v7v1bj28vgjo09icjv68v.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBM6IXiM60OUCelEccNa42F7FXEuIMdg1Y</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.binnariumedu.2222</string>
+	<string>ec.edu.utpl.labmovil2222</string>
 	<key>PROJECT_ID</key>
 	<string>lab-movil-2222</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,6 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:590170055799:ios:d8f04b4d9c0fe8ba1b9272</string>
+	<string>1:590170055799:ios:440e0469194354e41b9272</string>
 </dict>
 </plist>
