--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,8 @@
 name: lab_movil_2222
 description: A new Flutter project.
 
-# The following line prevents the package from being accidentally published to
-# pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none' 
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 2.0.0+2
 
 environment:
@@ -26,12 +14,12 @@ dependencies:
 
   # firebase
   # install other firebase dependencies using https://firebase.flutter.dev/
-  firebase_core: "^1.4.0"
-  firebase_analytics: "^8.2.0"
-  firebase_auth: "^3.0.1"
-  cloud_firestore: "^2.4.0"
-  cloud_functions: "^3.0.1"
-  firebase_storage: ^10.0.2
+  firebase_core: ^1.6.0
+  firebase_analytics: ^8.3.2
+  firebase_auth: ^3.1.1
+  cloud_functions: ^3.0.3
+  cloud_firestore: ^2.5.2
+  firebase_storage: ^10.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -58,7 +46,7 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/app-icon.png"
+  image_path: "assets/app-icon.jpg"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
