--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_markdown: ^0.6.2
   file_picker: ^4.0.0
   rxdart: ^0.27.1
+  clipboard: ^0.1.3
 
 dev_dependencies:
   flutter_test:
