--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   file_picker: ^4.0.0
   rxdart: ^0.27.1
   clipboard: ^0.1.3
+  wakelock: ^0.5.6
 
 dev_dependencies:
   flutter_test:
