--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   rxdart: ^0.27.1
   clipboard: ^0.1.3
   wakelock: ^0.5.6
+  transparent_image: ^2.0.0
 
 dev_dependencies:
   flutter_test:
