--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   # firebase
   # install other firebase dependencies using https://firebase.flutter.dev/
   firebase_core: ^1.6.0
+  firebase_database: "^8.0.0"
   firebase_analytics: ^8.3.2
   firebase_auth: ^3.1.1
   cloud_functions: ^3.0.3
