--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   clipboard: ^0.1.3
   wakelock: ^0.5.6
   transparent_image: ^2.0.0
+  shared_preferences: ^2.0.8
+  # package to highlight widgets, used for user guide on the first time
+  showcaseview: ^1.1.1
 
 dev_dependencies:
   flutter_test:
