add monster loader

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,9 @@ flutter:
     - assets/videos/
     - assets/navbar/
 
+    # loading placeholders
+    - assets/loaders/
+
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
 
