--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   provider: ^5.0.0
-  connectivity: ^3.0.6
+  connectivity_plus: ^2.0.2
   url_launcher: ^6.0.8
   video_player: ^2.2.5
   just_audio: ^0.8.0
