--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,9 +16,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven {
-            url 'https://google.bintray.com/exoplayer/'
-        }
+        // maven {
+        //     url 'https://google.bintray.com/exoplayer/'
+        // }
     }
 }
 
