--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,6 +18,8 @@ jobs:
         uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
+          flutter-version: 3.3.6
+
           
       - name: Install pub Dependencies
         run: flutter pub get
@@ -37,7 +39,8 @@ jobs:
         uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
-          
+          flutter-version: 3.3.6
+
       - name: Install pub Dependencies
         run: flutter pub get
         
