--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -16,6 +16,7 @@ jobs:
         uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
+          flutter-version: 3.3.6
           
       - name: Install pub Dependencies
         run: flutter pub get
@@ -35,6 +36,7 @@ jobs:
         uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
+          flutter-version: 3.3.6
           
       - name: Install pub Dependencies
         run: flutter pub get
